trying to fix issue with hamburger on ios

--- a/src/scss/modules/navigation.scss
+++ b/src/scss/modules/navigation.scss
@@ -34,4 +34,7 @@
     height: 30px;
     width: 30px;
     z-index: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
